--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
+    "mongoose": "^6.3.6",
     "package-lock.json": "^1.0.0"
   }
 }
